<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="Global_Variables" Id="{3d4ea763-d46a-4a6c-8c86-663c0c89768b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	TcJoy : FB_TcJoy;
	HmiButtonData0 : DINT;
	HmiButtonData1  : DINT;
	HmiBoolDword0 : DINT;
	HmiBoolDword1 : DINT;
	EnablemsClock: BOOL;
	msClockValid: BOOL;
	
	HMI_Servo1_Pos : LREAL;
	HMI_Servo1_Torque : LREAL;
	HMI_Servo1_Vel : LREAL;
	HMI_Servo1_Force AT %I* :LREAL;
	
	HMI_Servo2_Pos : LREAL;
	HMI_Servo2_Torque : LREAL;
	HMI_Servo2_Vel : LREAL;
	HMI_Servo2_Force AT %I* :LREAL;
	

	
	b_GearIn: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>