<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="IO" Id="{bbbb0fc5-1297-4d34-bc8a-189fc9af07a3}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
devstate AT %I*: UINT;
SaferyOK :BOOL; // safety system status
PowerEnabled :BOOL; // soft  bit we turn on to enable drives when we have no errors.

//Outputs
//Drive 1	
TorqueRequest1 AT %Q*: INT;
DriveEnable1 AT %Q*: BOOL;
//Drive1FaultReset AT %Q*: BOOL;
DriveAxis1 : AXIS_Ref;
//Drive 2
TorqueRequest2 AT %Q*: INT;
DriveEnable2 AT %Q*:BOOL;
//Drive2FaultReset AT %Q*: BOOL;
DriveAxis2 : AXIS_Ref;


Wcstate_bus2 AT%I* :BOOL;
//Simdrive1: AXIS_Ref;
//Simdrive2: AXIS_Ref;

//Inputs
LaserDistanceValue AT %I* :UINT; // Laser
Laser2 AT %I*: UINT;
//Drive 1


Drive1digitalinBtyes  AT %I*: ARRAY[0..3] OF BYTE;
Drive1positivelimitSw: BOOL;
Drive1NegativelimitSw : BOOL;
//DriveFaulted1  AT %I*: BOOL;
//DriveEnabled1  AT %I*: BOOL;
DriveFeedback1   AT %I*: INT;
LinearPosition1   AT %I*: DINT;
LoadCell1   AT %I*: DINT;

//Drive 2
Drive2digitalinBtyes  AT %I*: ARRAY[0..3] OF BYTE;
Drive2positivelimitSw: BOOL;
Drive2NegativelimitSw : BOOL;
//DriveFaulted2  AT %I*: BOOL;
//DriveEnabled2  AT %I*: BOOL;
DriveFeedback2   AT %I*: INT;
LinearPosition2   AT %I*: DINT;
LoadCell2   AT %I*: DINT;
 
Laser_mm: LREAL;
	Encoder_Left AT %I*: UDINT;
	Encoder_Right AT %I*: UDINT;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>