<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="P_HMI_Polling" Id="{6c3f4490-3ab2-422f-af2f-6459f65a48e9}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_HMI_Polling
VAR

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
Global_variables.HMI_Servo1_Pos := io.DriveAxis1.NcToPlc.ActPos;
Global_variables.HMI_Servo1_Vel := io.DriveAxis1.NcToPlc.ActVelo;
Global_variables.HMI_Servo1_force := io.LoadCell1;

Global_variables.HMI_Servo2_Pos := io.DriveAxis2.NcToPlc.ActPos;
Global_variables.HMI_Servo2_Vel := io.DriveAxis1.NcToPlc.ActVelo;
Global_variables.HMI_Servo2_force := io.LoadCell2;



Control.b_RequestServoReset := Global_variables.HmiButtonData0.3; // also passes fault reset to servo code, might want to move this to the fault monitoring routine later?

p_Faultmonitoring.b_FaultReset := Global_variables.HmiButtonData0.3; //pass fault reset to fault monitoring routine.
IF NOT p_TextmodeRead.bRead AND Global_variables.HmiButtonData0.5 THEN
control.b_RequestCSVRead :=   TRUE; 
ELSE
	control.b_RequestCSVRead :=   FALSE;
END_IF
IO.Laser_mm := UINT_TO_LREAL(io.LaserDistanceValue)  / 10.0;
(* //old mode change code.
IF Global_variables.HmiButtonData0.4 AND p_motorcontrol_st.state = 2 THEN // if in ready state, and asked to go to jog mode, jump to Gear In Request.
	// if halted and ready, switch to jogging mode. 
	Control.RequestedState := 5;
END_IF


IF Global_variables.HmiButtonData0.6 AND p_motorcontrol_st.state = 6 THEN // if in ready state, and asked to go to jog mode, jump to Gear In Request.
	// if halted and ready, switch to jogging mode. 
	Control.RequestedState :=  7;
END_IF
*)

IF Global_variables.HmiButtonData0.10 	THEN Control.RequestedState := 0; END_IF // Abs move mode
IF Global_variables.HmiButtonData0.11 	THEN Control.RequestedState := 1; END_IF // Rel Move Mode
IF Global_variables.HmiButtonData0.12 	THEN Control.RequestedState := 2; END_IF // Sin mode
IF Global_variables.HmiButtonData0.13 	THEN Control.RequestedState := 3; END_IF // Chirp Mode
IF Global_variables.HmiButtonData0.14 	THEN Control.RequestedState := 4; END_IF // CSV playback mode
IF Global_variables.HmiButtonData0.15 	THEN Control.RequestedState := 5; END_IF // Zeroing Mode
IF Global_variables.HmiButtonData0.16 	THEN Control.RequestedState := 6; END_IF // Jog to limits mode

 //Global_variables.HmiButtonData0.6 is execute button 



Global_variables.HmiBoolDword0.0 := io.DriveEnabled1;
Global_variables.HmiBoolDword0.1 := io.DriveFaulted1;
Global_variables.HmiBoolDword0.2 := io.DriveEnabled2;
Global_variables.HmiBoolDword0.3 := io.DriveFaulted2;
Global_variables.HmiBoolDword0.4 := Global_variables.b_GearIn;
Global_variables.HmiBoolDword0.5 := control.b_Servos_Halted;
Global_variables.HmiBoolDword0.6 := control.b_EnableServosFinal;
Global_variables.HmiBoolDword0.7 := p_Faultmonitoring.b_Faulted; 





]]></ST>
    </Implementation>
    <LineIds Name="P_HMI_Polling">
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="22" Count="1" />
      <LineId Id="13" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="94" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="102" Count="1" />
      <LineId Id="101" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="108" Count="3" />
      <LineId Id="54" Count="0" />
      <LineId Id="113" Count="4" />
      <LineId Id="112" Count="0" />
      <LineId Id="86" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="134" Count="5" />
      <LineId Id="133" Count="0" />
      <LineId Id="130" Count="1" />
      <LineId Id="125" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="66" Count="1" />
      <LineId Id="81" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="29" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>